--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:rollback": "npx prisma db push --force-reset && npx prisma db seed"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^4.2.0",
+    "@reduxjs/toolkit": "^1.8.3",
+    "clsx": "^1.2.1",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -19,6 +26,9 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "prisma": "^4.2.0",
+    "sass": "^1.54.3",
+    "ts-node": "^10.9.1",
     "typescript": "4.7.4"
   }
 }
