--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
   "dependencies": {
     "@prisma/client": "^4.2.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/jsonwebtoken": "^8.5.8",
+    "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "ms": "^2.1.3",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/ms": "^0.7.31",
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
