--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:rollback": "npx prisma db push --force-reset && npx prisma db seed"
+    "db:rollback": "npx prisma db push --force-reset && npx prisma db seed",
+    "test": "jest"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -26,15 +27,18 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/expect": "^24.3.0",
     "@types/ms": "^0.7.31",
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "jest": "^29.0.0",
     "prisma": "^4.2.0",
     "sass": "^1.54.3",
+    "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "4.7.4"
+    "typescript": "^4.7.4"
   }
 }
