--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ms": "^2.1.3",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -32,9 +33,11 @@
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
-    "jest": "^29.0.0",
+    "jest": "28.0.0",
+    "jest-mock-extended": "^2.0.7",
     "prisma": "^4.2.0",
     "sass": "^1.54.3",
     "ts-jest": "^28.0.8",
