--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@prisma/client": "^4.2.0",
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
