--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
+    "cookies-next": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
     "ms": "^2.1.3",
     "next": "12.2.4",
