WIP. Trying to connect cloud db on production

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "db:rollback": "npx prisma db push --force-reset && npx prisma db seed",
-    "prisma:pprod": "node ./pre-build-scripts/change-prisma-file.js && npm run db:rollback" ,
+    "prisma:pprod": "node ./pre-build-scripts/change-prisma-file.js" ,
     "test": "jest"
   },
   "prisma": {
