WIP.Logging file into console on production

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "db:rollback": "npx prisma db push --force-reset && npx prisma db seed",
-    "prisma:pprod": "node ./pre-build-scripts/change-prisma-file.js" ,
+    "prisma:pprod": "node ./pre-build-scripts/change-prisma-file.js && npm run prisma:showfile" ,
+    "prisma:showfile": "node ./pre-build-scripts/getFileData.js",
     "test": "jest"
   },
   "prisma": {
