--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sass": "^1.54.3",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vercel": "^28.2.3"
   }
 }
