--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "clsx": "^1.2.1",
     "cookies-next": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "ms": "^2.1.3",
     "next": "12.2.4",
+    "next-absolute-url": "^1.2.2",
+    "nodemailer": "^6.7.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
@@ -34,8 +37,10 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/expect": "^24.3.0",
+    "@types/lodash": "^4.14.185",
     "@types/ms": "^0.7.31",
     "@types/node": "18.6.5",
+    "@types/nodemailer": "^6.4.6",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/uuid": "^8.3.4",
